# cpputils

./: CMakeLists.txt  LICENSE  Makefile  appveyor.yml
src/: timer.hpp
tests/: timer_test.cpp
